--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "testcafe": "^2.1.0"
+    "testcafe": "2.4.0"
   },
   "devDependencies": {
+    "testcafe-reporter-html": "^1.4.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
