--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "testcafe-reporter-html": "^1.4.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "scripts": {
+    "e2e": "testcafe chrome"
   }
 }
